--- a/html/Footer.html
+++ b/html/Footer.html
@@ -1,6 +1,8 @@
-<footer class='main' id='f1'>
-    <p><a href="http://es.wikipedia.org/wiki/Quiz" target="_blank">Zer da Quiz?</a></p>
-    <p><a href="https://github.com/juletx/wst03">GitHub</a></p>
-    <img src="../images/licence.png" alt="lizentzia" height="30" width="30" />
+<footer class="navbar navbar-expand-lg navbar-dark fixed-bottom">
+	<div class="navbar-nav text-center">
+		<a class="nav-item nav-link" href="https://en.wikipedia.org/wiki/Quiz" target="_blank">Zer da
+				Quiz?</a>
+		<a class="nav-item nav-link" href="https://github.com/juletx/wst03" target="_blank">GitHub</a>
+		<img src="../images/licence.png" alt="lizentzia" height="30" width="30" />
+	</div>
 </footer>
-</div>
