--- a/html/Head.html
+++ b/html/Head.html
@@ -1,7 +1,16 @@
 <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
 <title>Galderak</title>
 <link rel='stylesheet' type='text/css' href='../styles/Style.css' />
-<link rel='stylesheet' type='text/css' media='only screen and (min-width: 530px) and (min-device-width: 481px)'
-    href='../styles/Wide.css' />
+<!--link rel='stylesheet' type='text/css' media='only screen and (min-width: 530px) and (min-device-width: 481px)'
+	href='../styles/Wide.css' /-->
 <link rel='stylesheet' type='text/css' media='only screen and (max-width: 480px)' href='../styles/Smartphone.css' />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="../js/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+	integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+</script>
+<script src="../js/ShowActiveMenu.js"></script>
