--- a/html/Footer.html
+++ b/html/Footer.html
@@ -1,8 +1,8 @@
-<footer class="navbar navbar-expand navbar-dark fixed-bottom">
-	<div class="navbar-nav text-center mx-auto">
-		<a class="nav-item nav-link" href="https://en.wikipedia.org/wiki/Quiz" target="_blank">Zer da
-				Quiz?</a>
-		<a class="nav-item nav-link" href="https://github.com/juletx/wst03" target="_blank">GitHub</a>
-		<a class="nav-item nav-link"><img src="../images/licence.png" alt="lizentzia" height="30" width="30" /></a>
-	</div>
-</footer>
+	<footer class="navbar navbar-expand navbar-dark">
+		<div class="navbar-nav text-center mx-auto">
+			<a class="nav-item nav-link" href="https://en.wikipedia.org/wiki/Quiz" target="_blank">Zer da Quiz?</a>
+			<a class="nav-item nav-link" href="https://github.com/juletx/wst03" target="_blank">GitHub</a>
+			<a class="nav-item nav-link"><img src="../images/licence.png" alt="lizentzia" height="30" width="30" /></a>
+		</div>
+	</footer>
+</div>
