--- a/html/Head.html
+++ b/html/Head.html
@@ -1,7 +1,8 @@
+<title>Quiz: galderen jokoa</title>
 <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="google-signin-client_id"
 	content="624494175204-oa15c1j6a04re9a7a2lfes6g7bj1v2o1.apps.googleusercontent.com ">
-<title>Quiz: galderen jokoa</title>
 <link rel='stylesheet' type='text/css' href='../styles/Style.css' />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
